# invoice_ocr_qwen

./: .gitignore  README.md  README.zh-CN.md  pyproject.toml
configs/: default.yaml
docs/notes/: 2026-03-15-ocr-findings.md
docs/plans/: 2026-03-14-deepseek-ocr-raw-design.md  2026-03-14-deepseek-ocr-raw-implementation.md  2026-03-14-dots-ocr-tryout-design.md  2026-03-14-dots-ocr-tryout-implementation.md  2026-03-14-ocr-comparison-report-design.md  2026-03-14-ocr-comparison-report-implementation.md
dots_ocr_tryout/: .gitignore  README.md  pyproject.toml  run_hf.py  run_vllm_client.py
dots_ocr_tryout/dots_ocr_tryout.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
dots_ocr_tryout/scripts/: bootstrap_hf.ps1  collect_result.ps1  run_hf.ps1  run_vllm_docker.ps1
input/: README.md
invoice_ocr_glm_paddle_eval/: .gitignore  README.md  pyproject.toml
invoice_ocr_glm_paddle_eval/configs/: default.yaml
invoice_ocr_glm_paddle_eval/scripts/: bootstrap.ps1  run_compare.ps1  run_extract.ps1  set-runtime-env.ps1
invoice_ocr_glm_paddle_eval/src/invoice_ocr_glm_paddle_eval/: __init__.py  __main__.py  cli.py  config.py  grounding.py  models.py  ocr.py  overlay.py  pipeline.py  qwen_parser.py  reporting.py  schema.py  text_parser.py
scripts/: bootstrap.ps1  run_benchmark.ps1  run_direct_dataset.ps1  run_direct_extract.ps1  run_extract.ps1  set-runtime-env.ps1
src/invoice_ocr_qwen/: __init__.py  __main__.py  cli.py  config.py
src/invoice_ocr_qwen/direct_bench/: __init__.py  __main__.py  app.py  dataset.py  page_io.py
src/invoice_ocr_qwen/direct_bench/prompts/: core_fields.txt  poc_invoice_contract_v1.txt  poc_invoice_contract_v2.txt  poc_invoice_contract_v3.txt  poc_invoice_fields.txt  poc_invoice_fields_v2.txt
src/invoice_ocr_qwen/extractors/: __init__.py  base.py  common.py  qwen_text.py  qwen_vl.py  rule_based.py
src/invoice_ocr_qwen/models/: __init__.py  schema.py
src/invoice_ocr_qwen/pipeline/: __init__.py  benchmark.py  evidence.py  ocr.py  orchestrator.py  overlay.py  runtime.py
