[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dots-ocr-tryout"
version = "0.1.0"
description = "Minimal raw-output tryout for dots.ocr 1.5"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "accelerate>=1.0.1",
  "huggingface_hub>=0.34.0",
  "pillow>=10.4.0",
  "PyYAML>=6.0.2",
  "qwen-vl-utils>=0.0.11",
  "torch>=2.7.0",
  "torchvision>=0.22.0",
  "transformers>=4.56.0"
]

[tool.setuptools]
py-modules = []
